--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="d-flex flex-column wrapper ">
         <nav class="navbar navbar-expand-lg navbar-dark bg-black border-bottom shadow-sm mb-3">
             <div class="container">
-                <a class="navbar-brand" href="/"><strong>Quitanda Online</strong></a>
+                <a class="navbar-brand" href="/"><strong>Loja Online</strong></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
@@ -59,16 +59,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-                    <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+                    <img src="img/slides/pngtree-simple-outdoor-forest-watch-banner-image_166794.jpg" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/download.png" class="d-block d-md-none  w-100" alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-                    <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+                    <img src="img/slides/pngtree-simple-outdoor-forest-watch-banner-image_166794.jpg" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/download.png" alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-                    <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+                    <img src="img/slides/pngtree-simple-outdoor-forest-watch-banner-image_166794.jpg" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/download.png" alt="">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
