--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="img/slides/pngtree-simple-outdoor-forest-watch-banner-image_166794.jpg" class="d-none d-md-block w-100" alt="">
-                    <img src="img/slides/download.png" class="d-block d-md-none  w-100" alt="">
+                    <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/seculus_banner_interna_femininos.webp" class="d-block d-md-none  w-100" alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="img/slides/pngtree-simple-outdoor-forest-watch-banner-image_166794.jpg" class="d-none d-md-block w-100" alt="">
-                    <img src="img/slides/download.png" alt="">
+                    <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/seculus_banner_interna_femininos.webp"  class="d-block d-md-none  w-100"  alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="img/slides/pngtree-simple-outdoor-forest-watch-banner-image_166794.jpg" class="d-none d-md-block w-100" alt="">
-                    <img src="img/slides/download.png" alt="">
+                    <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp" class="d-none d-md-block w-100" alt="">
+                    <img src="img/slides/seculus_banner_interna_femininos.webp"  class="d-block d-md-none  w-100"  alt="">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
