--- a/index.html
+++ b/index.html
@@ -85,6 +85,58 @@
 
 
     <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-5">
+                    <form class="justify-content-center justify-content-md-start mb-3 md-mb-0">
+                        <div class="input-group input-group-sm">
+                            <input type="text" class="form-control" placeholder="Digite Aqui oque Você Procura">
+                            <button class="btn btn-danger">Buscar</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-12 col-md-7">
+                    <div class="d-flex flex-row-reverse justify-content-between justify-content-md-start">
+                        <form class="ml-3 d-inline-block">
+                            <select class="form-select form-select-sm">
+                                <option>
+                                    Ordenar Pelo Nome
+                                </option>
+                                <option>
+                                    Ordenar Pelo Menor Preço
+                                </option>
+                                <option>
+                                    Ordenar Pelo Maior Preço
+                                </option>
+                            </select>
+                        </form>
+                        <nav class="d-inline-block paginas">
+                            <ul class="pagination pagination-sm my-0 ">
+                                <li class="page-item">
+                                    <button class="page-link">1</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">2</button>
+                                </li>
+                                <li class="page-item disabled">
+                                    <button class="page-link">3</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">4</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">5</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">6</button>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <hr class="mt-3">
+        </div>
     </main>
 
     <footer class="footer border-top position-fixed text-muted bg-light">
