--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
   <head>
-    <title>Quintanda Online</title>
+    <title>Loja Online</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -60,15 +60,15 @@
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
                     <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp" class="d-none d-md-block w-100" alt="">
-                    <img src="img/slides/seculus_banner_interna_femininos.webp" class="d-block d-md-none  w-100" alt="">
+                    <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp" class="d-block d-md-none  w-100" alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
                     <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp" class="d-none d-md-block w-100" alt="">
-                    <img src="img/slides/seculus_banner_interna_femininos.webp"  class="d-block d-md-none  w-100"  alt="">
+                    <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp"  class="d-block d-md-none  w-100"  alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
                     <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp" class="d-none d-md-block w-100" alt="">
-                    <img src="img/slides/seculus_banner_interna_femininos.webp"  class="d-block d-md-none  w-100"  alt="">
+                    <img src="img/slides/Timecenter-Banner-Busca-Pag.MASC-Desktop-min.webp"  class="d-block d-md-none  w-100"  alt="">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
@@ -478,7 +478,7 @@
         <div class="conteiner">
             <div class="row py-3">
                 <div class="col-12 col-md-4 text-center text-md-left">
-                    &copy; 2022 - Quintanda Online
+                    &copy; 2022 - Loja Online
                 </div>
                 <div class="col-12 col-md-4 text-center">
                    <a href="#" class="text-decoration-none text-dark">Politica de Privacidade</a>
