--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body style = "min-width: 372px">
@@ -84,7 +84,7 @@
     </header>
 
 
-    <main class="mb-5 pb-5 mb-md-0">
+    <main>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-5">
@@ -130,7 +130,7 @@
                 </div>
             </div>
 
-            <hr mt-3>
+            <hr class="mt-3">
 
             <div class="row g-3">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
@@ -473,18 +473,31 @@
         </div>
     </main>
 
+    <div style="height: 273px;" class="d-block d-md-none"></div>
+    <div style="height: 153px;" class="d-none d-md-block d-lg-none"></div>
+    <div style="height: 120px;" class="d-none d-lg-block"></div>
+
+
 
     <footer class="footer border-top position-fixed text-muted bg-light">
         <div class="conteiner">
             <div class="row py-3">
                 <div class="col-12 col-md-4 text-center text-md-left">
-                    &copy; 2022 - Loja Online
+                    &copy; 2022 - Loja Online <br>
+                    Rua Virtual inexistente, 245, compulandia/PC <br>
+                    CNPJ 99.999.9999/0001-99
                 </div>
                 <div class="col-12 col-md-4 text-center">
-                   <a href="#" class="text-decoration-none text-dark">Politica de Privacidade</a>
+                   <a href="privacidade.html" target="_blank" class="text-decoration-none text-dark">Politica de Privacidade</a> <br>
+                   <a href="termos.html" target="_blank" class="text-decoration-none text-dark">Termos de Uso</a> <br>
+                   <a href="quemsomos.html" target="_blank"  class="text-decoration-none text-dark">Quem Somos</a> <br>
+                   <a href="trocas.html" target="_blank"  class="text-decoration-none text-dark">Trocas e Devoluções</a>
                 </div>
                 <div class="col-12 col-md-4 text-center text-md-right">
-                    <a href="#" class="text-decoration-nonetext-dark">Administrar</a>
+                    <a href="#" target="_blank"  class="text-decoration-nonetext-dark">Administrar</a><br>
+                    <a href="#" target="_blank"  class="text-decoration-nonetext-dark">contato pelo Site</a><br>
+                   E-mail : <a href="#" target="_blank"  class="text-decoration-nonetext-dark">testeteste@gmil.com </a><br>
+                   <a href="#" target="_blank"  class="text-decoration-nonetext-dark">contato pelo Site</a><br>
                 </div>
             </div>
         </div>
